feat: adapt JWT identity and student scope